Fix dark mode fonts

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -90,7 +90,7 @@ h3 {
 
 h4 {
 	font-family: var(--fonts-raleway);
-	color: var(--colors-subheading);
+	color: var(--colors-body-font);
 	text-align: center;
 	margin: 1em 0 0 0;
 	letter-spacing: 0.4em;
